--- a/static/cover/index.html
+++ b/static/cover/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>静听</title>
+    <title>镜听</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,6 @@
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">首页</a></li>
                   <li><a href="#">功能</a></li>
-                  <li><a href="#">登录</a></li>
                   <li><a href="#">联系我们</a></li>
                 </ul>
               </nav>
@@ -54,8 +53,8 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">听见看得见</h1>
-            <p class="lead">每一个进步都能看清</p>
+            <h1 class="cover-heading">听见  看得见</h1>
+            <p class="lead">看得到点点滴滴</p>
             <p class="lead">
               <a href="home" class="btn btn-lg btn-default">立即体验</a>
             </p>
@@ -63,7 +62,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Copyright © 兰宁儿 | 京ICP备88888888号</p>
+              <p>Copyright © 镜听 | 粤ICP备88888888号</p>
             </div>
           </div>
 
