remove base template's footer part

--- a/static/cover/index.html
+++ b/static/cover/index.html
@@ -55,8 +55,8 @@ var _hmt = _hmt || [];
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">首页</a></li>
-                  <li><a href="#">功能</a></li>
-                  <li><a href="#">联系我们</a></li>
+                  <li><a href="/user/sign-in?next=/home">登录</a></li>
+                  <li><a href="mailto:pengwk@pengwk.com">联系我们</a></li>
                 </ul>
               </nav>
             </div>
@@ -66,7 +66,7 @@ var _hmt = _hmt || [];
             <h1 class="cover-heading">听见  看得见</h1>
             <p class="lead">看得到点点滴滴</p>
             <p class="lead">
-              <a href="home" class="btn btn-lg btn-default">立即体验</a>
+              <a href="home" class="btn btn-lg btn-default">免 登陆 试试</a>
             </p>
           </div>
 
